_docs/kustomize/akash-provider/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: akash-provider
spec:
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: akash-provider
  template:
    metadata:
      labels:
        app: akash-provider
    spec:
      serviceAccountName: akash-provider
      containers:
        - name: akash-provider
          image: ghcr.io/akash-network/provider-services:stable
          imagePullPolicy: IfNotPresent
          args:
            - provider-services
            - run
            - --cluster-k8s
          ports:
            - name: gateway
              containerPort: 8443
          volumeMounts:
            - name: home
              mountPath: /home
      volumes:
        - name: boot
          configMap:
            name: akash-provider-boot
        - name: keys
          secret:
            secretName: akash-provider-keys
        - name: home
          emptyDir: {}
