_docs/kustomize/akash-provider/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: akash-provider
spec:
  selector:
    app: akash-provider
  ports:
    - name: gateway
      port: 8443
    - name: gateway
      port: 8444
