_docs/kustomize/akash-provider/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: akash-provider
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "https"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
spec:
  ingressClassName: "akash-ingress-class"
  rules:
    - host: akash-provider.localhost

      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: akash-provider
                port:
                  name: gateway
